@@ -22,3 +22,4 @@
 - Added option to leave from job in jobs GUI.
 - Quest objective amount is now optional (default 1)
 - Fixed issue when used 1.12 and lower versions then some materials not work correctly.
+- Added option to jobs shop to hide icon if a player there are no enough points to buy a item
